scripts/nullness/annotator/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8.txt
../annotator/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/strategy/StrategyPatternTutorial.java:33: error: [dereference.of.nullable] dereference of possibly-null reference this.learningStrategy
        this.learningStrategy.learn();
            ^
../annotator/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/factory/Theatre.java:47: error: [initialization.fields.uninitialized] the constructor does not initialize fields: repertoire
    public Theatre(TheatreDirector director) {
           ^
../annotator/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/bridge/Camera.java:34: error: [dereference.of.nullable] dereference of possibly-null reference this.lightRecorder
        this.lightRecorder.recordLight();
            ^
../annotator/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/MetroLine.java:74: error: [initialization.fields.uninitialized] the constructor does not initialize fields: previousStop, nextStop
        public Stop(Station name) {
               ^
4 errors
